--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,22 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+		 <dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-test</artifactId>
+    	<scope>test</scope>
+    	<exclusions>
+    		<exclusion>
+    			<groupId>org.junit.vintage</groupId>
+    			<artifactId>junit-vintage-engine</artifactId>
+    		</exclusion>
+    	</exclusions>
+    </dependency>
+		 <dependency>
+		 	<groupId>com.generation</groupId>
+		 	<artifactId>lojagame</artifactId>
+		 	<version>0.0.1-SNAPSHOT</version>
+		 </dependency>
 	</dependencies>
 
 	<build>
